Refactor: Collectors.toList에서 toList로 변경